[package]
name = "arc-script-template"
version = "0.0.0"
edition = "2018"

[workspace]

[dependencies]
arc-script = { version = "=0.0.0", git = "https://github.com/cda-group/arc" }
arcon      = { git = "https://github.com/segeljakt/arcon" }
prost      = { version = "0.7.0" }

[build-dependencies]
arc-script-build = { version = "=0.0.0", git = "https://github.com/cda-group/arc" }
